fixed bugs on footer with display on mobile and laptop

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -847,7 +847,7 @@ header .header-text div .fa-solid {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
-  padding: 30px 0 0 0;
+  padding: 30px 0;
   height: 20vh;
 }
 .footer .footer-container .apropos h4 {
