--- a/assets/styles/layout/_footer.scss
+++ b/assets/styles/layout/_footer.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
-    padding: 30px 0 0 0;
+    padding: 30px 0;
     height: 20vh;
 
     .apropos {
